--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "vlc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon Server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/C4-HaithamNawwaf/VLC/issues"
   },
-  "homepage": "https://github.com/C4-HaithamNawwaf/VLC#readme"
+  "homepage": "https://github.com/C4-HaithamNawwaf/VLC#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0"
+  }
 }
