--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
- 
     "express": "^4.18.0",
-
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "uuidv4": "^6.2.13"
   }
 }
